--- a/src/shared/components/layout/Menu/Menu.css
+++ b/src/shared/components/layout/Menu/Menu.css
@@ -1,9 +1,7 @@
 .menu{
     position: relative;
+    left: 0%;
     height: 100%;
     background-color: #2A2A2A;
     z-index: 1;
-    width: -25%;
-  
-
 }
